crates/solidity/testing/snapshots/bindings_output/using/receiver_implicit_conversion/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseParen or Comma.
   ╭─[ input.sol:9:34 ]
   │
 9 │     function test(bytes calldata c) public {
   │                                  ┬  
   │                                  ╰── Error occurred here.
───╯
[39mReferences and definitions:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ library Lib {
    │         ─┬─  
    │          ╰─── name: 1
  2 │     function nopCalldata(bytes calldata) external {}
    │              ─────┬─────       ────┬───  
    │                   ╰────────────────────── name: 2
    │                                    │     
    │                                    ╰───── name: 3
  3 │     function nopMemory(bytes memory) external {}
    │              ────┬────  
    │                  ╰────── name: 4
    │ 
  6 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 5
    │ 
  8 │     bytes s;
    │           ┬  
    │           ╰── name: 6
  9 │     function test(bytes calldata c) public {
    │              ──┬─       ────┬───  
    │                ╰────────────────── name: 7
    │                             │     
    │                             ╰───── name: 8
 10 │         bytes memory m;
    │                      ┬  
    │                      ╰── name: 9
    │
    ├─[ input.sol:1:1 ]
    │
  7 │     using Lib for bytes;
    │           ─┬─  
    │            ╰─── ref: 1
    │ 
 11 │         m.nopCalldata();
    │         ┬ ─────┬─────  
    │         ╰────────────── ref: 9
    │                │       
    │                ╰─────── ref: 2
 12 │         m.nopMemory();
    │         ┬ ────┬────  
    │         ╰──────────── ref: 9
    │               │      
    │               ╰────── ref: 4
 13 │         c.nopCalldata();
    │         ┬ ─────┬─────  
    │         ╰────────────── unresolved
    │                │       
    │                ╰─────── unresolved
 14 │         c.nopMemory();
    │         ┬ ────┬────  
    │         ╰──────────── unresolved
    │               │      
    │               ╰────── unresolved
 15 │         s.nopCalldata();
    │         ┬ ─────┬─────  
    │         ╰────────────── ref: 6
    │                │       
    │                ╰─────── ref: 2
 16 │         s.nopMemory();
    │         ┬ ────┬────  
    │         ╰──────────── ref: 6
    │               │      
    │               ╰────── ref: 4
────╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ library Lib {
    ┆ ┆   
  4 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │         function nopCalldata(bytes calldata) external {}
    │     ──────────────────────────┬─────┬────────────────────  
    │                               ╰──────────────────────────── definiens: 2
    │                                     │                      
    │                                     ╰────────────────────── definiens: 3
  3 │         function nopMemory(bytes memory) external {}
    │     ────────────────────────┬────────────────────────  
    │                             ╰────────────────────────── definiens: 4
    │ 
  5 │ ╭─▶ 
    ┆ ┆   
 18 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 5
    │
    ├─[ input.sol:1:1 ]
    │
  8 │ │       bytes s;
    │ │   ──────┬──────  
    │ │         ╰──────── definiens: 6
  9 │ ╭─▶     function test(bytes calldata c) public {
    ┆ ┆   
 17 │ ├─▶     }
    │ │           
    │ ╰─────────── definiens: 7
    │
    ├─[ input.sol:1:1 ]
    │
  9 │     function test(bytes calldata c) public {
    │                   ───────┬──────  
    │                          ╰──────── definiens: 8
 10 │         bytes memory m;
    │ ────────────┬───────────  
    │             ╰───────────── definiens: 9
────╯
